# deforestation-data

./: README.md  Untitled Notebook 2023-10-23 13_24_41.py  api-endpoint.md  config.json  deforestation-basin-aggregation.py  download-GLAD-alerts.py  download-basin-data.py  download-gfc.py  download_gfc.py  pyproject.toml  utils.py
setup/: install-sedona.sql  sedona-init.sh
