[tool.poetry]
name = "deforestation-data"
version = "0.1.0"
description = "Data pipeline for deforestation data"
authors = ["Aleksander Stangeland <aleksander.stangeland@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xarray = "^2023.12.0"
dask = "^2023.12.0"
rioxarray = "^0.15.0"
rio-cogeo = "^5.1.0"
httpx = "^0.25.2"
dagster = "^1.5.12"
dagster-webserver = "^1.5.12"
distributed = "^2023.12.0"
bokeh = "^3.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
